# StackOverflowCollect

./: .gitignore  AGENTS.md  CrawlOutput.csv  CrawlOutput_converted.csv  README.md  input.csv  main.py  pyproject.toml  run_pipeline.sh
scripts/: 01_crawl.sh  02_answer.sh  03_evaluate.sh  04_translate.sh
src/: __init__.py  evaluator.py  prompts.py  stack_client.py  storage.py  translator.py  workflow.py
src/agents/: evaluator.py  translator.py
src/cli/: __init__.py  answer.py  crawl.py  evaluate.py  translate.py
src/conf/: prompts.py
src/core/: __init__.py  config.py  evaluator.py  models.py  translator.py
src/evaluate/: __init__.py  compare.py  coverage.py  lint.py  llm_eval.py
src/flows/: workflow.py
src/io/: __init__.py  stack_client.py  storage.py
src/services/: evaluator.py  llm_client.py  stack_client.py  storage.py  translator.py
src/utils/: coverage.py  csv_loader.py  model_name.py  rehydrate.py  restructure.py  text.py  validators.py  yaml_lint.py
stackoverflowcollect/: __init__.py  models.py  storage.py  text.py  translator.py  workflow.py
tests/: README.md  conftest.py  test_csv_loader.py  test_csv_output.py  test_services.py  test_units.py  test_workflow.py
