[project]
name = "stackoverflowcollect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "argcomplete>=3.6.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
